test/libhyperion/syntaxTests/functionTypes/inline_array_with_value_call_option.hyp
contract C {
    function f() external payable returns (uint) { assert(msg.value > 0); return 1; }
    function g() external payable returns (uint) { assert(msg.value > 0); return 2; }

    function h() public payable returns (uint) {
        return [this.f, this.g][0]{value: 1}();
    }
}
// ====
// QRVMVersion: >zond
// ----
// TypeError 4888: (181-197): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
